backups/backup_2025-10-14_18-42-52/server/iisnode_logs/EXELONMYSDT-310-24596-stderr-1760442775322.txt
Application has thrown an uncaught exception and is terminated:
C:\Users\312903\Documents\IT Connect\IT Operations Portal\server\emailService.js:76
					{ emailAddress: { address: "hrhelpdesk@exelonglobal.com" } 
					^

SyntaxError: Unexpected token '{'
    at wrapSafe (node:internal/modules/cjs/loader:1620:18)
    at Module._compile (node:internal/modules/cjs/loader:1662:20)
    at Object..js (node:internal/modules/cjs/loader:1820:10)
    at Module.load (node:internal/modules/cjs/loader:1423:32)
    at Function._load (node:internal/modules/cjs/loader:1246:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1445:12)
    at require (node:internal/modules/helpers:135:16)
    at Object.<anonymous> (C:\Users\312903\Documents\IT Connect\IT Operations Portal\server\routes\delivery_tracker.js:4:38)
